--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "twig/twig": "1.13.*"
+        "twig/twig": "1.13.*",
+        "sleiman/airtable-php": "^2.3"
     }
 }
